samples/_failures_safe/1761045431_c85a78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9d7fe5e.c: In function ‘main’:
./samples/SAFE/__tmp_a9d7fe5e.c:155:21: error: expected declaration or statement at end of input
  155 |                     print_matrix(&a, "A");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_a9d7fe5e.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9d7fe5e.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9d7fe5e.c:155:21: error: expected declaration or statement at end of input
